@@ -27,7 +27,7 @@ public class RoleRepository {
     private RowMapper<Role> roleRowMapper = (ResultSet rs, int rowNum) -> {
         Role role = new Role();
         role.setId(rs.getInt("id"));
-        role.setName(rs.getString("name"));
+        role.setName(rs.getString("role"));
         role.setCreatedAt(rs.getTimestamp("created_at") != null ? rs.getTimestamp("created_at").toLocalDateTime() : null);
         role.setUpdatedAt(rs.getTimestamp("updated_at") != null ? rs.getTimestamp("updated_at").toLocalDateTime() : null);
         return role;
@@ -35,7 +35,7 @@ public class RoleRepository {
 
     // Create
     public Role save(Role role) {
-        String sql = "INSERT INTO roles (name, created_at, updated_at) VALUES (?, ?, ?)";
+        String sql = "INSERT INTO roles (role, created_at, updated_at) VALUES (?, ?, ?)";
         KeyHolder keyHolder = new GeneratedKeyHolder();
 
         jdbcTemplate.update(connection -> {
@@ -60,12 +60,12 @@ public class RoleRepository {
     public Optional<Role> findById(int id) {
         String sql = "SELECT * FROM roles WHERE id = ?";
         List<Role> roles = jdbcTemplate.query(sql, roleRowMapper, id);
-        return roles.isEmpty() ? Optional.empty() : Optional.of(roles.get(0));
+        return roles.isEmpty() ? Optional.empty() : Optional.of(roles.getFirst());
     }
 
     // Update
     public void update(Role role) {
-        String sql = "UPDATE roles SET name = ?, updated_at = ? WHERE id = ?";
+        String sql = "UPDATE roles SET role = ?, updated_at = ? WHERE id = ?";
         jdbcTemplate.update(sql,
                 role.getName(),
                 Timestamp.valueOf(role.getUpdatedAt()),
@@ -80,26 +80,26 @@ public class RoleRepository {
 
     // Kiểm tra name đã tồn tại
     public boolean existsByName(String name) {
-        String sql = "SELECT COUNT(*) FROM roles WHERE name = ?";
+        String sql = "SELECT COUNT(*) FROM roles WHERE role = ?";
         Integer count = jdbcTemplate.queryForObject(sql, Integer.class, name);
         return count != null && count > 0;
     }
 
     // Lấy danh sách permission của một role
     public List<Integer> findPermissionIdsByRoleId(int roleId) {
-        String sql = "SELECT permission_id FROM role_permissions WHERE role_id = ?";
+        String sql = "SELECT permission_id FROM roles_permissions WHERE role_id = ?";
         return jdbcTemplate.query(sql, (rs, rowNum) -> rs.getInt("permission_id"), roleId);
     }
 
     // Gán permission cho role
     public void assignPermission(int roleId, int permissionId) {
-        String sql = "INSERT INTO role_permissions (role_id, permission_id) VALUES (?, ?)";
+        String sql = "INSERT INTO roles_permissions (role_id, permission_id) VALUES (?, ?)";
         jdbcTemplate.update(sql, roleId, permissionId);
     }
 
     // Xóa permission của role
     public void removePermission(int roleId, int permissionId) {
-        String sql = "DELETE FROM role_permissions WHERE role_id = ? AND permission_id = ?";
+        String sql = "DELETE FROM roles_permissions WHERE role_id = ? AND permission_id = ?";
         jdbcTemplate.update(sql, roleId, permissionId);
     }
 }
